--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Blog Layout</h1>
+
+    <p>Paragraph</p>
 
   </body>
 </html>
