basic layout done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="head">
+
+
+    </header>
+
+      <div class="circle">Blog
+      </div>
+
+      <container class="columns">
+        <div class="sidebar">SIDEBAR
+        </div>
+        <div class="main-content">MAIN CONTENT
+        </div>
+      </container>
     <h1>Blog Layout</h1>
 
     <p>Paragraph</p>
