blog layout layout

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
       </div>
 
       <container class="columns">
-        <div class="sidebar">SIDEBAR
+        <div class="sidebar"><p>SIDEBAR</p>
+          <br />
+            <p class="sidebar-content">This is text and it belongs in the side bar and thats where it will go </p>
         </div>
-        <div class="main-content">MAIN CONTENT
+        <div class="main-bar"><p>MAIN CONTENT</p>
+          <br />
+          <p class="main-bar-content">This is text and it belongs in the side bar and thats where it will go </p>
         </div>
       </container>
     <h1>Blog Layout</h1>
