sidebar and search bar

--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
 
     </header>
 
-      <div class="circle">Blog
+      <div class="circle">
+      Blog
       </div>
 
       <container class="columns">
-        <div class="sidebar"><p>SIDEBAR</p>
+        <div class="sidebar"><p>Dustin's Blog |</p>
+          <p>Interests:</p>
           <br />
-            <p class="sidebar-content">This is text and it belongs in the side bar and thats where it will go </p>
+            <p class="sidebar-content">Skateboarding<br />
+            Video Games<br />
+            Anime<br />
+            Science<br />
+            ______________</p>
+
+            <p class="search"><br />SEARCH</p>
+            <br />
+            <input type="text" name="search" placeholder="Search keywords">
         </div>
         <div class="main-bar"><p>MAIN CONTENT</p>
           <br />
           <p class="main-bar-content">This is text and it belongs in the side bar and thats where it will go </p>
         </div>
       </container>
-    <h1>Blog Layout</h1>
 
-    <p>Paragraph</p>
 
   </body>
 </html>
