everything but javascript button finished

--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
             <br />
             <input type="text" name="search" placeholder="Search keywords">
         </div>
-        <div class="main-bar"><p>MAIN CONTENT</p>
+        <div class="main-bar"><p>X Games began on Thursday, January 26, 2017.<br />
+        Five final events were held on this<br />
+         day.
+        </p>
           <br />
-          <p class="main-bar-content">This is text and it belongs in the side bar and thats where it will go </p>
+          <p class="main-bar-content">By Dustin Burnette, <a href = "">The Iron Yard</a> Student Dallas, Texas</p>
+          <div class="bottom-image">
+            <img src="http://a.espncdn.com/combiner/i?img=/media/motion/2017/0314/actn_170227_ACTN_SBD_JESSE_PAUL_REAL_SNOW_2017406/actn_170227_ACTN_SBD_JESSE_PAUL_REAL_SNOW_2017406.jpg&w=480" />
+          </div>
         </div>
+
+        
       </container>
 
 
